--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-finxos-element-type",
   "version": "1.0.0",
-  "description": "Element type/types",
+  "description": "Element type/types.",
   "homepage": "https://github.com/afeiship/next-finxos-element-type",
   "author": {
     "name": "afei",
