--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^2.1.0",
+    "prettier": "^1.19.1",
     "yeoman-assert": "^3.1.1",
-    "prettier": "^1.19.1"
+    "yeoman-test": "^2.1.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
     "@jswork/next-registry-choices": "^1.0.0",
+    "@jswork/yeoman-generator": "^1.0.4",
     "@jswork/yeoman-generator-helper": "^1.0.3",
     "chalk": "^3.0.0",
     "replace-in-file": "^5.0.2",
